# expaynse

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  pitch-deck-20260429.html  pnpm-lock.yaml  tsconfig.json
app/: globals.css  icon.tsx  layout.tsx  page.tsx
app/activity/: page.tsx
app/claim/: page.tsx
app/compliance/: page.tsx  (+1 more)
components/: app-bar.tsx  app-sidebar.tsx  auditor-modal.tsx  connect-wallet-btn.tsx  deposit-modal.tsx  employee-layout.tsx  employer-layout.tsx  footer.tsx  private-topup-modal.tsx  setup-company-modal.tsx  wallet-provider.tsx  withdraw-modal.tsx
docs/: MAGICBLOCK.md
hooks/: useWallet.tsx
lib/: checkpoint-sync.ts  magicblock-api.ts  payroll-calendar.ts  payroll-math.ts  payroll-mode.ts  payroll-payout-mode.ts  payroll-runtime-boundary.ts  private-swap.ts  storage.ts  wallet-request-auth.ts
payroll1-rust/: Anchor.toml  errors.txt  package-lock.json  package.json  pnpm-lock.yaml
programs/payroll/: Cargo.toml
programs/payroll/src/: errors.rs  lib.rs
scripts/: check-payroll-idl-parity.js  deploy-private-payroll-devnet.sh  repair-private-payroll-idl-devnet.sh  run_with_dotenv.py
tests/: alias-loader.mjs  app-autonomous-checkpoint-e2e.ts  app-route-smoke.ts  app-self-custodial-e2e.ts  cashout-payout-mode-e2e.ts  checkpoint-crank-logic.test.ts  checkpoint-crank-regression.e2e.ts  crank-scheduler-e2e.ts  edge-cases-stress-test.ts  employee-init-reuse-smoke.ts  full-autonomous-payroll-e2e.ts  private-swap-config.test.ts  treasury-swap-flow.e2e.ts  treasury-swap-live.e2e.ts  treasury-swap-quote-probe.e2e.ts
(+172 files in other folders)
